# sandbox

./: LICENSE  README.md
cpp/: .gitignore
cpp/clspv_test/: CMakeLists.txt  makefile
cpp/clspv_test/opencl/c/: fast_find_keypoints.cl  fast_nonmax_supression.cl  gaussian_filter.cl  mandelbrot.cl
cpp/clspv_test/src/: fast.cc  gaussian_filter.cc  main.cc
cpp/make_project/: .gitignore  README.md  makefile
cpp/make_project/src/: aaa.h  bbb.h  fuga.cc  hoge.c
cpp/pybind11_test/: .gitignore  README.md  main.py  makefile  pyrightconfig.json
cpp/pybind11_test/inc/: array.h  polymorphic_pet.h  world.h
cpp/pybind11_test/src/: add.cc  array.cc  dog.cc  dog.h  hoge.cc  pet.cc  pet.h  polymorphic_dog.cc  polymorphic_dog.h  polymorphic_pet.cc  world.cc  world.h
cpp/spdlog-test/: CMakeLists.txt  bootstrap.sh  main.cc  vcpkg.json
cpp/spdlog-test/lib/: lib.cc  lib.h  logger.h
cpp/vulkan_hpp_test/: .gitignore  bindings.cc  main.cc  main.py  makefile
cpp/vulkan_hpp_test/inc/: app.h  buffer.h  device.h  instance.h
cpp/vulkan_hpp_test/src/: app.cc  buffer.cc  device.cc  instance.cc  vk_mem_alloc.cc
python/apply_sim3/: README.md  main.py  pyproject.toml
python/apply_sim3/lib/: align.py  create_case.py
python/colmap_known_poses/: main.py  pyproject.toml
python/colmap_utils/camera_params_printer/: main.py  pyproject.toml
python/colmap_utils/check_non_connected_images/: README.md  main.py  pyproject.toml
python/colmap_utils/colmap_known_poses/: README.md  main.py  pyproject.toml
python/colmap_utils/create_ref_image/: main.py  pyproject.toml
python/colmap_utils/create_spheresfm_pos/: main.py
python/colmap_utils/delete_points_from_images_txt/: main.py  pyproject.toml
python/colmap_utils/model_merge/: main.py  (+2 more)
python/dl/: hello_gpu.py  mnist-ddp.py  mnist.py
python/equi2cube/: convert.py  pyproject.toml  spheresfm2colmap.py
python/hydra_test/: README.md
python/icp_test/: README.md  icp_test.py  requirements.txt
python/load_realsense_bag/: main.py
python/logging/: main.py
python/oputuna_test/: environment.yaml  mnist.py
python/pytorch_cpp_cuda/: makefile
python/vis_colmap_sparse_by_rerun/: main.py  pyproject.toml
(+17 files in other folders)
